# thinking-tools-framework

./: .gitignore  .mcp.json  =2.13.0  BOOTSTRAP-COMPLETE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT-IMPERATIVES.md  QUICK_START.md  README.md  pyproject.toml
.bootstrap/: handover_checklist.md  knowledge_graph.json  process_memory.jsonl  session_context.md
.claude/: settings.local.json
.coordination/: BACKLOG.md  COORDINATION-PROTOCOL.md  COORDINATOR-INTEGRATION-GUIDE.md  SKILLS-MCP-INTEGRATION-STRATEGY.md  messages.jsonl
.coordination/archive/: msg-20251117-004500.json  msg-20251119-220000-priority6-process-memory.json  msg-priority19-completion.json  msg-priority2-completion-rejected.json  msg-priority2-fix-completion.json  msg-skills-export-completion-final.json
.coordination/inbox/: msg-20251117-183000-layer1-cli-directive.json  msg-20251117-214500-mcp-smoke-test.json  msg-20251117-233000-priority1-process-memory-provisioning.json  msg-20251118-042500-priority15-skills-export.json  msg-20251118-044500-fix-integration-tests.json  msg-20251118-050500-priority2-bootstrap-package.json  msg-20251118-051500-priority19-project-imperatives.json  msg-20251118-140000-fix-integration-tests-priority2.json  msg-20251119-160000-priority3-validation-enhanced.json  msg-20251119-163000-fix-priority3-test-failures.json  msg-20251119-180000-priority4-core-components.json  msg-20251119-190000-priority5-contracts-protocols.json  msg-20251119-CRITICAL-git-initialization.json  msg-20251119-priority3-ruff-fix.json  msg-20251120-post-roadmap-validation.json  msg-20251120-priority7-cli-refactoring.json  msg-priority9-documentation-system-completion.json
.coordination/outbox/: msg-20251118-priority15-accepted.json  msg-20251118-priority2-accepted.json  msg-20251119-critical-git-accepted.json  msg-20251119-priority3-ACCEPTED.json  msg-20251119-priority3-rejected.json  msg-20251119-priority4-ACCEPTED.json  msg-20251119-priority4-completion.json  msg-20251119-priority5-ACCEPTED.json  msg-20251119-priority5-completion.json  msg-20251120-priority6-completion.json  msg-20251120-priority7-completion.json  msg-20251120-roadmap-validation-report.json  msg-CRITICAL-git-init-complete.json  (+3 more)
.progress/: current-task.json
.serena/: project.yml
data/: process_memory.jsonl
docs/: PARADIGM-INFORMATION-MEMORY-GRAPH.md  PROCESS-MEMORY-USAGE.md
docs/specs/: 01-CONSTITUTION.md  (+18 more)
schemas/: config-v1.0.schema.json  process-memory-v1.0.schema.json  thinking-tool-v1.0.schema.json
scripts/: validate.sh
templates/: SKILL.md.j2  execute.sh.j2  handover_document.md.j2
(+115 files in other folders)
